fix spacing issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -596,4 +596,5 @@ button.p-btn{
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, .08);
   position: fixed !important;
   bottom: 0 !important;
+  height: 70px;
 }
